# type_name

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml
.circleci/: config.yml
scripts/: circle_linux_configure_build_test.py  install_local_pre_commit_hooks.py  pre-commit  prepare-commit-msg
sources/: CMakeLists.txt
sources/include/type_name/: type_name.h
tests/: CMakeLists.txt
tests/src/: main_tests.cpp  type_name_tests.cpp
